# codex-desktop-linux

./: .codespellrc  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Makefile  README.md  RELEASING.md  REVIEW.md  SECURITY.md  SUPPORTED.md  config.toml  flake.nix  install.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
computer-use-linux/: Cargo.toml
computer-use-linux/src/: atspi_tree.rs  cosmic_helper.rs  diagnostics.rs  gnome_extension.rs  identity.rs  main.rs  screenshot.rs  server.rs  terminal.rs  windows.rs
computer-use-linux/src/windowing/: command_runner.rs  mod.rs  registry.rs  target.rs  types.rs
computer-use-linux/src/windowing/backends/: cosmic.rs  gnome.rs  hyprland.rs  i3.rs  kwin.rs  mod.rs  sway.rs
docs/: architecture.md  browser-control.md  build-and-packaging.md  computer-use-backend-maintenance.md  custom-model-catalog.schema.json  custom-models.md  decisions.md  github-cli-auth.md  index.md  linux-computer-use.md  linux-features-architecture.md  native-setup.md  nix.md  troubleshooting.md  updater.md  webview-server-evaluation.md
launcher/: start.sh.template  webview-server.py
linux-features/: README.md  features.example.json
nix/: home-manager-module.nix  nixos-module.nix
release/: upstream-dmg-lock.json
scripts/: bootstrap-wizard.sh  build-appimage.sh  build-deb.sh  build-pacman.sh  build-rpm.sh  ci-local.sh  install-deps.sh  patch-linux-window-ui.js  patch-linux-window-ui.test.js  rebuild-candidate.sh
tests/: scripts_smoke.sh  test-package-artifact.sh
updater/: Cargo.toml
(+184 files in other folders)
